# AI-for-CRM

./: .env.example  .gitignore  Dockerfile  GenX_360_CRM_Documentation.docx  Project Documentation 21-07-2026  README.md  calibration_report.json  pyproject.toml  render.yaml  test_ui.html  ~$nX_360_CRM_Documentation.docx
app/: __init__.py  ai_provider.py  calibrate_threshold.py  clinical_engine.py  config.py  crm_client.py  image_quality.py  local_model_provider.py  main.py  rules.py  scheduler.py  schemas.py  security.py  services.py  storage.py  subject_validation.py
data/: clinical_rules.json  sample_crm.json  sample_labels.csv  treatment_rules.json
models/: README.md
models/current/: labels.json  mobilenetv3_large_skin_ai.onnx
scratch/: create_docs.py  evaluate_onnx.py  fine_tuned_model_evaluator.md  manual_test.py  onnx_evaluation_report.json
tests/: test_api_contracts.py  test_clinical_engine.py  test_image_quality.py  test_local_model_provider.py  test_module1_flow.py  test_provider_fallback.py  test_rules.py  test_subject_validation.py
training/: README.md  dataset.py  evaluate.py  export_onnx.py  requirements.txt  train.py
