[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genx360-ai-service"
version = "0.1.0"
description = "FastAPI pilot service for GenX 360 CRM AI image analysis and upsell recommendations."
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10.4",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "onnxruntime>=1.18.0",
    "Pillow>=10.0.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.30",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2.0"]
test = ["pytest>=8.2.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*"]

